--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <div id="main"></div>
     <!-- Do _not_  rely on this URL in production. Use only during development.  -->
     <script src="http://netflix.github.io/falcor/build/falcor.browser.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
